--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
 
     <!-- Menu items -->
     <string name="menu_connect">Connect</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="menu_refresh"></string>
     <string name="menu_disconnect">Disconnect</string>
     <string name="menu_scan">Scan</string>
     <string name="menu_stop">Stop</string>
