Changing to AndroidPlot. versionCode=10. VersionName=5.0.0.
Is running as a strip chart with fixed-size data array.
Doesn't handle full data array and consequently not sessions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="label_device_address">Device address: </string>
     <string name="label_hr">Heart Rate: </string>
     <string name="label_rr">R-R: </string>
+    <string name="hr_title">HR and RR vs. Time (for 5 min)</string>
+    <string name="hr_range_title">HR, /sec RR, ms/10</string>
     <string name="label_bat">Battery Level: </string>
     <string name="label_act">Activity: </string>
     <string name="label_pa">Peak Acceleration: </string>
