--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,9 @@
     <string name="label_device_address">Device address: </string>
     <string name="label_hr">Heart Rate: </string>
     <string name="label_rr">R-R: </string>
-    <string name="hr_title">HR and RR vs. Time (for 5 min)</string>
+    <string name="hr_title">HR and RR vs. Time</string>
     <string name="hr_range_title">HR, /sec RR, ms/10</string>
+    <string name="hr_domain_title">Time</string>
     <string name="label_bat">Battery Level: </string>
     <string name="label_act">Activity: </string>
     <string name="label_pa">Peak Acceleration: </string>
@@ -67,6 +68,7 @@
     <string name="menu_plot">Plot</string>
     <string name="menu_discard">Discard</string>
     <string name="menu_merge">Merge</string>
+    <string name="menu_zoom_reset">Reset Pan/Zoom</string>
     <string name="menu_split">Split</string>
     <string name="menu_save">Save Sessions</string>
     <string name="menu_save_combined">Save As Combined Session</string>
