Made significant changes to get it running correctly on Android 12.
versionCode=18, versionName="5.5.1"
minSdkVersion is 23.
Switching devices is much improved.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,11 @@
     <string name="device_monitor_name">BLE Cardiac Monitor</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="ble_not_supported">Bluetooth LE is not supported</string>
-    <string name="permission_coarse_location">Scanning disabled
-        \n\nACCESS_COARSE_LOCATION permission must be granted to scan for Bluetooth devices.
+    <string name="ble_not_supported">Bluetooth LE is not supported.</string>
+    <string name="permission_location">Scanning disabled
+        \n\nACCESS_FINE_LOCATION permission must be granted to scan for Bluetooth devices.
         \n\nYou may have to grant this manually for BLE Explorer in Settings.</string>
+    <string name="permission_not_granted">All of the necessary permissions for this application to work properly have not been granted. You can change the permissions in Settings | apps.</string>
     <string name="label_data">Data: </string>
     <string name="label_device_name">Device name: </string>
     <string name="label_device_address">Device address: </string>
@@ -27,6 +28,7 @@
     <string name="label_state">State: </string>
     <string name="label_status">Status: </string>
     <string name="no_data">NA</string>
+    <!--suppress CheckTagEmptyBody -->
     <string name="empty"></string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
@@ -46,6 +48,7 @@
     <string name="select_restore_file">Select File to Restore</string>
     <string name="delete_prompt">All existing data will be deleted and it may take a while</string>
     <string name="restoring_database_progress_text">Restoring&#8230;\n(Can take a long time)</string>
+    <string name="select_replace_database">Select replacement database</string>
     <string name="null_uuid_msg">Received null uuid</string>
     <string name="null_error_msg">Received null error message</string>
 
@@ -77,9 +80,10 @@
     <string name="menu_start_now">Start Now</string>
     <string name="menu_check_all">Check All</string>
     <string name="menu_check_none">Check None</string>
+    <string name="menu_save_database_cvs">Save Database as CSV</string>
+    <string name="menu_restore_database_cvs">Restore Database from CSV</string>
     <string name="menu_save_database">Save Database</string>
-    <string name="menu_save_database_cvs">Save Database as CVS</string>
-    <string name="menu_restore_database_cvs">Restore Database from CVS</string>
+    <string name="menu_restore_database">Replace Database</string>
     <string name="menu_restoring">Restoring</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_read_battery_level">Get Battery level</string>
